play around with heading

--- a/Pages/article-1.html
+++ b/Pages/article-1.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Project1:Manuscript</title>
 		<link href="reset.css" rel="stylesheet">
-
 		<link href="Stylesheets/article-1.css" rel="Stylesheet">
+		<link rel="stylesheet" href="../Stylesheets/article-1.css">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,15 +27,17 @@
 				<span class="letter">D</span>
 				<span class="letter">on a Feeling</span>
 			</h1>
-			<h5 id="author-name">Written by Michael Rock (2015)</h5>
-			<h6 id="article-name">Hooked on a Feeling </h6>
+			
+			<div class="author-box">
+				Written by: Michael Rock (2015)
+			</div>
 		</header>
 		
 		<article>
 			<section>
-			<p class="W"> We designers love to fashion ourselves as <em>“problem solvers,”</em> but let’s face it: the line between solving problems and creating them is blurry at best. What problem is being solved by a $1,500 pair of heels, or a $150,000 car, or a $150,000,000 architectural extravaganza in the Bois de Boulogne? The truth is, no matter what designers say, we have never simply answered problems. The act of design vacillates between the functional and the beguiling, often performing one while claiming the other. 
+				<p class="W"> We designers love to fashion ourselves as <em>“problem solvers,”</em> but let’s face it: the line between solving problems and creating them is blurry at best. What problem is being solved by a $1,500 pair of heels, or a $150,000 car, or a $150,000,000 architectural extravaganza in the Bois de Boulogne? The truth is, no matter what designers say, we have never simply answered problems. The act of design vacillates between the functional and the beguiling, often performing one while claiming the other. 
 			</p> 
-			</section>
+	
 
 			<p>
 				Le Corbusier dismissed the architecture of his beaux-arts contemporaries as cloying, while he looked longingly to the brutal utility of the grain elevators and factories devised by American engineers. A half century later, Rem Koolhaas jettisoned function in favor of performance: 
@@ -93,45 +95,12 @@
 			<p>
 				While the ascendency of mood boarding reflects the way brands, from commercial products to people, are imagined at this moment, the question remains why we are all so susceptible to manufactured emotion. Why are we so needy? Perhaps this yearning is a reaction to the lurking presence of Big Data. As vast files of meta-data and personal search histories are ferreted away in some server farm in god-knows-where, we crave the kind of anodyne, gauzy experiences that at least promise something warmer and more human. When everything is available all the time and we’re inundated with information in every way, shape and form, we’re left no choice but to favor what makes us feel.
 			</p>
+			</section>
 		</article>
 
 		<section class="link-to-article">
 			<a class="link"href="https://2x4.org/ideas/2015/hooked-on-a-feeling/">Link to article</a>
-		<section>
-
-		<section class="reading-response-title">
-			<h3>Reading Response</h3>
 		</section>
-
-		<section class="commentary-heading">
-			<h2>Vy Mai's Commentary</h2>
-		</section>
-
-		<article id="reading-response">
-			<p class="r1">
-				<span class="author-title">Michael Rock's <q>Hooked on a Feeling</q></span> explores how contemporary design and branding increasingly focus on evoking emotions rather than merely solving functional problems. While discussing how brands today strive to deliver the emotional experience they promise. The author revisits the concept of mood boards—traditional visual tools that capture and convey abstract feelings. As data and information constantly surround us, we continue to seek meaningful connections and emotional resonance.
-			</p>
-
-			<p>
-				The reading remains relevant to contemporary interaction design by emphasizing emotional engagement and the use of mood boards to evoke feelings. Mood boards continue to be vital in the design process, providing a tangible way to capture and communicate emotions. However, the rise of generative AI tools like Midjourney and DALL·E introduces new dimensions to design. These AI tools can assist designers by generating images that suggest certain feelings and inspire ideas. Nevertheless, they still lack the ability to evoke human emotions as effectively as traditional mood boards 
-			</p>
-
-			<p>
-				If the reading is older or print-focused, its ideas can still translate effectively to digital contexts. The emphasis on emotional connection and branding remains crucial in design. Historically, designers used collages made from cut-out pictures in magazines or materials to find references and visualize ideas. Similarly, in digital design, visual curation continues to be relevant. However, the way information is presented has evolved, with considerations such as text size, scaling differences, and the transition from printed colors to digital screens affecting how design elements are experienced. Despite these differences, the core principles of emotional resonance and visual curation remain pertinent across various mediums.
-			</p>
-
-			<p>
-				The author successfully conveys the increasing relevance of emotion thinking in design due to the societal shift towards seeking emotional resonance and personal connection in design. This brought up the concept of using mood boards to experiment with different feelings evoke from brandings. This trend reflects a response to the overwhelming nature of Big Data, indicating a desire for warmth and human touch amidst constant information overload. The reading also illustrates the evolution of design from purely functional to incorporating emotional and aesthetic elements, mirroring broader trends in branding and personal expression
-			</p>
-
-			<p>
-				The article heavily focuses on aesthetic values; however, the author didn’t discuss much about the balance between functionality and aesthetics. Aesthetic is as important to brand identity, but in the end, there needs to be a balance between the two. Functionality still plays a vital role in interaction design. Depending on the medium and the intent of the brand, achieving the right balance between usability and aesthetics is crucial. While a visually appealing design can attract users, its functionality ensures that users can effectively and efficiently achieve their goals. While intuitive, gut-based approaches value emotions more, interaction design often relies on a balance between an intuitive understanding of user needs and analytical insights. Successful design integrates both aspects to create meaningful and functional experiences.
-			</p>
-
-			<p>
-				The reading highlights the significance of integrating emotional and aesthetic considerations, not just functionality, into design. As an aspiring user experience designer, it made me reflect on what it truly means to be a problem solver. In the booming “empathy economy,” we need to balance emotional impact with factual information in branding and marketing. I agree that the role of branding has shifted to focus on the emotional response it evokes. Therefore, when creating a strong brand, I want to ensure that it not only delivers a clear message but also evokes specific emotions when people think about or interact with it. This involves maintaining consistency in branding, including selecting the right colors and typefaces to ensure a coherent emotional delivery throughout the brand presence. Additionally, I plan to incorporate visual tools such as mood boards into my design process to help me find inspiration, encapsulate abstract ideas, and bring my vision to life.
-			</p>
-		</article>
 		
 		<footer>
 			<p id="citation">Published in T Magazine © Michael Rock</p>
