--- a/Pages/article-2.html
+++ b/Pages/article-2.html
@@ -26,8 +26,9 @@
 		</nav>
 
 		<header>
-			<h1>Gradients: the colorful design trend aiming to soothe these anxious times
-			</h1>
+			<div class="title">
+				<h1>Gradients: the colorful design trend aiming to soothe these anxious times</h1>
+			</div>
 			
 			<div id="gradient-box">
 			</div>
