--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
 
 		<header>
 			<h1>Binding</h1>
-			<p class="intro"> This collection, created by Vee Mai, delves into the emotional resonance of design—exploring how feelings, color, and word choices shape user experiences in the digital product era. Through these articles, we uncover how gradients and carefully chosen words can provide meaningful and impactful interactions</p>
+			<!-- <div class="project-title">
+				<span class="key">B</span>
+				<span class="key">I</span>
+				<span class="key">N</span>
+				<span class="key">D</span>
+				<span class="key">I</span>
+				<span class="key">N</span>
+				<span class="key">G</span>
+			</div> -->
+
+			<p class="intro intro-animation"> This collection, created by Vee Mai, delves into the emotional resonance of design—exploring how feelings, color, and word choices shape user experiences in the digital product era. Through these articles, we uncover how gradients and carefully chosen words can provide meaningful and impactful interactions</p>
 		</header>
 		
 		<main>
