--- a/Pages/article-3.html
+++ b/Pages/article-3.html
@@ -33,7 +33,12 @@
 
 		<p>I want to start with a quote from writer, activist, and teacher, Thich Nhat Hanh. In Being Peace, he writes:</p>
 
-		<p>“If you are a poet, you will see clearly that there is a cloud floating in every sheet of paper. Without a cloud, there will be no rain; without rain, the trees cannot grow; and without trees, we cannot make paper. The cloud is essential for the paper to exist.”</p>
+		<blockquote>
+			<p> “If you are a poet, you will see clearly that there is a cloud floating in every sheet of paper. Without a cloud, there will be no rain; without rain, the trees cannot grow; and without trees, we cannot make paper. The cloud is essential for the paper to exist.”
+			</p>
+			<div class="quote-popup"></div>
+		</blockquote>
+	
 
 		<p>Thich Nhat Hanh calls this concept interbeing. He goes on to say that the sun is also in the sheet of paper; and the lumberjack who cut down the tree; and his parents; and the wheat that made his morning bread; and so on. All of these things make it possible for the paper to exist.</p>
 
@@ -77,14 +82,14 @@
 
 		<p>So I’ve been thinking about what communication looks like in the design process. Here’s my take:</p>
 
-		<ol>
+		<ul>
 			<li>
 				<p>Self</p>
 				<p>Team</p>
 				<p>Product</p>
 				<p>Public</p>
 			</li>
-		</ol>
+		</ul>
 
 		<p><strong>Self:</strong> We start by thinking alone. We may be collaborating with friends or colleagues, but we still need space to make sense of what we’re making. We have to put it into terms we can relate to.</p>
 
@@ -104,10 +109,10 @@
 
 		<p>Earlier this year, Matt Jones gave a talk at Interaction15 about his experience running BERG and directing interaction design at Google’s Creative Lab. He said:</p>
 
-		<blockquote class="quotes">
-			<p><q>
-				“[Writers] are the fastest designers in the world. They’re amazing at boiling down incredibly abstract concepts into tiny packets of cognition, or language.”
+		<blockquote>
+			<p> “[Writers] are the fastest designers in the world. They’re amazing at boiling down incredibly abstract concepts into tiny packets of cognition, or language.”
 			</p>
+			<div class="quote-popup"></div>
 		</blockquote>
 
 		<p>Going back to Thich Nhat Hanh, I believe that writing is part of every design. If you can clearly define what you’re making and articulate its value, the steps to bring it out into the world will go much faster. It’s easy to put pixels together when you’ve already made decisions. And since we work across systems and borders, there’s no better way to articulate design than with writing.</p>
@@ -123,12 +128,18 @@
 
 		<p>These are some of the questions that have come up for me along the way:</p>
 
+		<ul>
+			<li>
+				<p>What does writing contribute to the design process?</p>
+				<p>How can designers use words to articulate what they’re making?</p>
+				<p>How can we, as humans, benefit from clear language?</p>
+				<p>How can writing make products easier to adopt and understand?</p>
+				<p>How can I broaden the definition of “writing” for designers?</p>
+			</li>
+		</ul>
 		
+		<p>I keep using that phrase “words as material,” so let’s talk about words for a bit.</p>
 
-
-
-
-						
 	</main>
 
 
