added new css styling to article 1 and worked on desktop mode for article 3

--- a/Pages/article-1.html
+++ b/Pages/article-1.html
@@ -16,39 +16,71 @@
 	</head>
 
 	<body>
-		<div class="verticalline"></div>
 		<header>
-			<h1 id="title-art">
-				<span class="letter">H</span>
-				<span class="letter">O</span>
-				<span class="letter">O</span>
-				<span class="letter">K</span>
-				<span class="letter">E</span>
-				<span class="letter">D</span>
-				<span class="letter">on a Feeling</span>
-			</h1>
-			
-			<div class="author-box">
-				Written by: Michael Rock (2015)
+			<div class="header">
+				<span class="class-name">Type & Interaction</span>
+				<span class="project">Article 01</span>
+				<span class="my-name">Vee Mai</span>
 			</div>
+	
+			<h1>Hooked on a <span id="hover-title"><a href="https://www.nicolefenton.com/words-as-material/#:~:text=Using%20words%20as%20material%20along,right%20out%20of%20the%20mud.">Feeling</a></span></h1>
+	
+			<nav class="nav-container">
+				<a href="../index.html" class="nav-item">home</a>
+				<a href="article-1.html" class="nav-item">Article 1</a>
+				<a href="article-2.html" class="nav-item">Article 2</a>
+				<a href="article-3.html" class="nav-item">Article 3</a>
+			</nav>
 		</header>
-		
+	
 		<article>
+			<div class="article-info">
+				<div class="article-author">
+					<p id="written-by">Written by </p>
+					<p id="author-name"><a href="https://www.nicolefenton.com/">
+						Michael Rock</a></p>
+				</div>
+	
+				<div class="original-text">
+					<p id="duration">8 min read </p>
+					<p id="article-link">2015</p>
+				</div>
+			</div>
+	
 			<aside>
 				<details>
-					<summary> Table of Contents</summary>
-					<ul>
-						<li>Section 01</li>
-					</ul>
-					<ul>
-						<li>Section 01</li>
-					</ul>
+					<summary>Table of Contents</summary>
+						<ul>
+							<li><a href="#section1">Emotional > Functional </a></li>
+						</ul>
+						<ul>
+							<li><a href="#section2">How communication works</a></li>
+						</ul>
+						<ul>
+							<li><a href="#section3">How writing fits in</a></li>
+						</ul>
+						<ul>
+							<li><a href="#section4">The gap between us</a></li>
+						</ul>
+							<li><a href="#section5">What are words for</a></li>
+						</ul>
+						</ul>
+							<li><a href="#section6">Understand and clarify the problem</a></li>
+						</ul>
+						</ul>
+						<li><a href="#section7">More people, more problems</a></li>
+						</ul>
 				</details>
 			</aside>
 			<section>
-				<p class="W"> We designers love to fashion ourselves as <em>“problem solvers,”</em> but let’s face it: the line between solving problems and creating them is blurry at best. What problem is being solved by a $1,500 pair of heels, or a $150,000 car, or a $150,000,000 architectural extravaganza in the Bois de Boulogne? The truth is, no matter what designers say, we have never simply answered problems. The act of design vacillates between the functional and the beguiling, often performing one while claiming the other. 
-			</p> 
-	
+				<div class="sticky-header" id="section1">
+					<h2>Emotional > Functional </h2>
+				</div>
+
+				<blockquote class="quotes">
+					<p class="W"> We designers love to fashion ourselves as <em>“problem solvers,”</em> but let’s face it: the line between solving problems and creating them is blurry at best. What problem is being solved by a $1,500 pair of heels, or a $150,000 car, or a $150,000,000 architectural extravaganza in the Bois de Boulogne? The truth is, no matter what designers say, we have never simply answered problems. The act of design vacillates between the functional and the beguiling, often performing one while claiming the other. 
+					</p> 
+				</blockquote>
 
 			<p>
 				Le Corbusier dismissed the architecture of his beaux-arts contemporaries as cloying, while he looked longingly to the brutal utility of the grain elevators and factories devised by American engineers. A half century later, Rem Koolhaas jettisoned function in favor of performance: 
@@ -58,15 +90,18 @@
 				<p><q>
 					Functionality is boring; performance is about what role the building plays and what kind of scene it triggers.
 				</p>
+				<p class="remKoolhaas">
+					<cite><strong>— Rem Koolhaas</strong></cite> 
+				</p>
 			</blockquote>
-
-			<p class="remKoolhaas">
-				<cite><strong>— Rem Koolhaas</strong></cite> 
-			</p>
 
 			<p class="p3">
 				There has long been an ideological divide between the utilitarian and the emotional, between rational design and the decorative arts, but the balance of power is shifting: In the battle between the head and the gut, the gut’s now cleaning up.
 			</p>
+
+			<div class="sticky-header" id="section2">
+				<h2>Empathy Economy</h2>
+			</div>
 
 			<p>
 				The empathy economy is booming. Facts are out, feelings are in. This is attributed, at least in part, to a kind of brand-mania that asserts that everything from your razor blade to your public library to the IRS needs to have a relatable personality. Everyone is in the business of brand management: artists, designers, businesses, celebrities, politicians, museums, universities, armies, nations. (Is it only a matter of time before we’re debating our intergalactic positioning?) Branding is supposedly not about what something says, or what it means, but how it makes us feel. 	
@@ -80,6 +115,10 @@
 				The most successful brands, or at least the ones everyone emulates, have the knack for using design to produce an emotional coherence that spans from content to product to experience. Think Apple or BMW or Chanel. Not everything has to look alike, but it all has to feel alike. Whenever we encounter them we get that familiar brand sensation. That tingling tells you its working.
 			</p>
 
+			<div class="sticky-header" id="section1">
+				<h2>Mood Board Revolution</h2>
+			</div>
+			
 			<p>
 				So if the goal of design is emotional coherence, how is that end achieved? Enter the mood board: the most quotidian, slightly-embarrassing and now ubiquitous design tool. The mood board has long been associated with the softer design arts — fashion, interiors, styling — that trade in allusion and affect. Decorators used them, serious architects didn’t. There’s no science to it, simply a collection of inspirations and influences: an array of Xeroxed pictures pinned to a foamcore panel or scattered on the studio floor, a cloud of references composed to evoke atmosphere. 
 				
