--- a/Pages/article-2.html
+++ b/Pages/article-2.html
@@ -9,29 +9,14 @@
 	</head>
 
 	<body>
-		<nav> 
-			<div class="left-nav">
-				<a href="../index.html">Home</a>
-			</div>
-
-			<ul class="right-nav"> 
-				<li>Readings list
-					<ul>
-						<li><a href="pages/article-1.html" >Article 01</a></li>
-						<li><a href="pages/article-2.html" >Article 02</a></li>
-						<li><a href="pages/article-3.html" >Article 03</a></li>
-					</ul>
-				</li>
-			</ul> 
-		</nav>
-
 		<header>
-			<div class="title">
-				<h1>Gradients: the colorful design trend aiming to soothe these anxious times</h1>
-			</div>
+			<nav class="nav">
+				<span class="class-name">PMCD 5002</span>
+				<span class="project">Project 3</span>
+				<span class="my-name">Vee Mai</span>
+			</nav>
 			
-			<div id="gradient-box">
-			</div>
+			<h1>Gradients: the colorful design trend aiming to soothe these anxious times</h1>
 
 			<div class="article-info">
 				<div class="article-author">
@@ -45,13 +30,11 @@
 			</div>
 		</header>
 
-
-
 		<article>
 			<section>
-			<div class="section-header">
-				<h2>The Rise of GRADIENTS</h2>
-			</div>
+				<div class="section-header">
+					<h2>The Rise of GRADIENTS</h2>
+				</div>
 
 			<p>Welcome to Noticed, The Goods’ design trend column. You know that thing you’ve been seeing all over the place? Allow us to explain it.</p>
 
