--- a/Pages/article-3.html
+++ b/Pages/article-3.html
@@ -1,84 +1,115 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Project1:Manuscript</title>
+		<title>Article03</title>
 		<meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="reset.css" rel="stylesheet">
+		<link href="../reset.css" rel="stylesheet">
 		<link href="Stylesheets/article-3.css" rel="Stylesheet">
 		<link rel="Stylesheet" href="../Stylesheets/article-3.css">
 	</head>
 
 <body>
 	<header>
-		<nav class="nav">
-			<span class="class-name">PMCD 5002</span>
-			<span class="project">Project 3</span>
+		<div class="header">
+			<span class="class-name">Type & Interaction</span>
+			<span class="project">Article 03</span>
 			<span class="my-name">Vee Mai</span>
+		</div>
+
+		<h1>Words as <span id="hover-title"><a href="https://www.nicolefenton.com/words-as-material/#:~:text=Using%20words%20as%20material%20along,right%20out%20of%20the%20mud.">Materials</a></span></h1>
+
+		<nav class="nav-container">
+			<a href="../index.html" class="nav-item">home</a>
+			<a href="article-1.html" class="nav-item">Article 1</a>
+			<a href="article-2.html" class="nav-item">Article 2</a>
+			<a href="article-3.html" class="nav-item">Article 3</a>
 		</nav>
-
-
-		<h1>Words as <span class="heading-art">Materials</span>
-		</h1>
-
-		<p><span id="autho"> Written by: Nicole Fenton</span></p>
 	</header>
 
-		<div class="subtext">
-			I gave this talk at RISD in Providence and UXLx in Lisbon. Thanks to Tim Maly and Bruno Figueiredo for inviting me to speak, and to Allen Tan, Tina Lee, and Max Fenton for their thoughtful feedback on drafts.	
+	<article>
+		<div class="article-info">
+			<div class="article-author">
+				<p id="written-by">Written by </p>
+				<p id="author-name"><a href="https://www.nicolefenton.com/">
+					Nicole Fenton</a></p>
+			</div>
+
+			<div class="original-text">
+				<p id="duration">10 min read </p>
+				<p id="article-link">March 12,2015</p>
+			</div>
 		</div>
-	
 
-	<main>
-
+		<aside>
+			<details>
+				<summary>Table of Contents</summary>
+					<ul>
+						<li><a href="#section1">How Design Works</a></li>
+					</ul>
+					<ul>
+						<li><a href="#section2">How communication works</a></li>
+					</ul>
+					<ul>
+						<li><a href="#section3">How writing fits in</a></li>
+					</ul>
+					<ul>
+						<li><a href="#section4">The gap between us</a></li>
+					</ul>
+						<li><a href="#section5">What are words for</a></li>
+					</ul>
+					</ul>
+						<li><a href="#section6">Understand and clarify the problem</a></li>
+					</ul>
+					</ul>
+					<li><a href="#section7">More people, more problems</a></li>
+					</ul>
+			</details>
+		</aside>
+		
+		<div class="intro">
+				<em>I gave this talk at RISD in Providence and UXLx in Lisbon. Thanks to Tim Maly and Bruno Figueiredo for inviting me to speak, and to Allen Tan, Tina Lee, and Max Fenton for their thoughtful feedback on drafts.</em>	
+		</div>
+		
 		<p>I want to start with a quote from writer, activist, and teacher, Thich Nhat Hanh. In Being Peace, he writes:</p>
 
-		<blockquote>
+		<blockquote class="quotes">
 			<p> “If you are a poet, you will see clearly that there is a cloud floating in every sheet of paper. Without a cloud, there will be no rain; without rain, the trees cannot grow; and without trees, we cannot make paper. The cloud is essential for the paper to exist.”
 			</p>
-			<div class="quote-popup"></div>
 		</blockquote>
 	
-
 		<p>Thich Nhat Hanh calls this concept interbeing. He goes on to say that the sun is also in the sheet of paper; and the lumberjack who cut down the tree; and his parents; and the wheat that made his morning bread; and so on. All of these things make it possible for the paper to exist.</p>
 
 		<p>I bring up this story, because it helped me understand systems at a deeper level. I’ve been thinking a lot about what it takes to make a design project successful and even possible in the first place. I have a few hunches and I believe words play an important part in the process. But before I get to that, let’s look at how the paper metaphor relates to us as designers.</p>
 
-		<div class="sticky-header">
+		<div class="sticky-header" id="section1">
 			<h2>How Design works </h2>
 		</div>
 
-		<p>Our work depends on many things: time, money, technology, materials, constraints, and most importantly, the lives, attention, and experiences of other people. We participate in and often orchestrate a process that’s bigger than we are. Design requires collaborators, contributors, customers, toolmakers, factory workers, marketers, postal workers, call center agents, you name it. If we look closely, we can see that people are at the heart of everything we make.
+		<p>Our work depends on many things:<span class="hover-texts"> time, money, technology, materials, constraints,</span>  and most importantly,:<span class="hover-texts">the lives, attention, and experiences </span> of other people. We participate in and often orchestrate a process that’s bigger than we are. Design requires collaborators, contributors, customers, toolmakers, factory workers, marketers, postal workers, call center agents, you name it. If we look closely, we can see that people are at the heart of everything we make.
 		</p>
 
-		<p>When I started writing this talk, I asked my designer friends on Twitter to answer this question: What’s the number one thing that sabotages projects for you? Here are a few of their answers:</p>
+		<p>When I started writing this talk, I asked my designer friends on Twitter to answer this question: <span id="question">What’s the number one thing that sabotages projects for you?</span> Here are a few of their answers:</p>
 
-		<p>Ian Marquette (@ianmarquette):</p>
+		<p class="speech-bubble"><em>a lack of clear understanding between myself and clients, which basically comes down to communication.</em> Ian Marquette (@ianmarquette)</p>
 
-		<p>a lack of clear understanding between myself and clients, which basically comes down to communication.</p>
+		<p class="speech-bubble"><em>difference in expectations/poor communication</em> Mark Forscher (@garbnzgh)</p>
 
-		<p>Mark Forscher (@garbnzgh):</p>
-		<p>difference in expectations / poor communication</p>
+		<p class="speech-bubble"><em>feedback from 18794387294 different people </em>Zak Greene (@zearl)</p>
 
-		<p>Zak Greene (@zearl):</p>
+		<p class="speech-bubble"><em>Miscommunication. Handoffs to silos. Whatever the opposite of collaboration is.</em>Matt Felten (@mattfelten)</p>
 
-		<p>feedback from 18794387294 different people
-		</p>
+		<p class="speech-bubble"><em>lack of extroverted thinking. One step at a time.</em>Jonathan Myers (@jnthnmyrs):</p>
 
-		<p>Matt Felten (@mattfelten):</p>
-		<p>Miscommunication. Handoffs to silos. Whatever the opposite of collaboration is.</p>
-
-		<p>Jonathan Myers (@jnthnmyrs):</p>
-		<p>lack of extroverted thinking. One step at a time.</p>
-
-		<p>Davin Risk (@davin):</p>
-		<p>Same as life really… lack of clarity around intent.</p>
+		<p class="speech-bubble"><em>Same as life really… lack of clarity around intent</em>Davin Risk (@davin)</p>
 
 		<p>These problems boil down to one thing: communication. Sharing ideas with other people. Working through decisions together to make something new. We’re here to make meaningful changes in the world, but we can’t do that if we don’t understand each other. We can’t ignore people or work around them.</p>
 		
 		<p>If we want design to communicate, we need to communicate in the design process.</p>
 
-		<h2>How communication works</h2>
+		<div class="sticky-header"id="section2">
+			<h2>How communication works </h2>
+		</div>
 
 		<p>So I’ve been thinking about what communication looks like in the design process. Here’s my take:</p>
 
@@ -101,7 +132,10 @@
 
 		<p>As we move through each of these steps, the idea starts to solidify and become visible to people around us. This is why I think of design as a process of articulation. We join together to express an idea in a coherent form. We bring ideas to life. We connect the dots or build bridges for our users. That often means being specific about what a product does, who it’s for, why it matters, and how it works. We have to trek through a pile of ambiguity to do this.</p>
 
-		<h2>How writing fits in</h2>
+		<div class="sticky-header" id="section1">
+			<h2>How writing fits in</h2>
+		</div>
+	
 
 		<p>This outward arc or continuum is the same one that I go through as a writer. I think and sketch and jot down notes; I question my assumptions; I struggle to understand. Later, when I have a sense of what I need to do, I share drafts and take in feedback; I try different variations and keep refining the work until it’s ready for the public.</p>
 
@@ -140,17 +174,57 @@
 		
 		<p>I keep using that phrase “words as material,” so let’s talk about words for a bit.</p>
 
+		<div class="sticky-header" id="section3"></div>
+			<h2>what are words for</h2>
+		</div>
+
+		<p>Words shape our ideas, how we see the world, and how we relate to one another. As design teacher and researcher Anne Galloway says:</p>
+
+		<blockquote>
+			<p>“Language doesn’t just make things—it assembles, cobbles together, entire worlds and all the relations within.”
+			</p>
+		</blockquote>
+
+		<p>Language makes it possible for us to navigate places and relationships; to express needs and requirements; to name and categorize things; and to understand our place in the universe.
+		</p>
+
+		<p>Last year, I had the pleasure of editing Abby Covert’s marvelous book about information architecture, How to Make Sense of Any Mess. In it, she says:</p>
+
+		<blockquote>
+			<p>““Language is the material of intent… Language is how we tell other people what we want, what we expect of them, and what we hope to accomplish together. Without language, we can’t collaborate.”
+			</p>
+		</blockquote>
+
+		<p>As a technology, writing has many merits. It complements verbal and visual communication. It’s sturdy and can stay put. It’s cheap. It’s easy to change or reproduce. And it moves faster than ships or airplanes. Writing makes it possible to propel knowledge and intent forward through time.</p>
+
+		<p>Historically, writing has served us as a force of stability. It gave us a way to record history, exchange information, and establish legal systems. We wrote to preserve knowledge, transmit ideas, and pass on traditions. And of course, we still do those things, even with hypertext. We still treat writing as a product of the editorial process.</p>
+
+		<div class="sticky-header" id="section4"></div>
+			<h2>Understand and clarify the problem</h2>
+		</div>
+		
+		<p>But I’ve also come to see writing as a material in itself. Something we can play with and manipulate. Something that can change over time as questions come up in the design process or an idea evolves. Writing can be a tool for talking to ourselves when we’re still figuring things out. A sort of mirror or feedback system. A way to understand and articulate design.</p>
+
+		<p>When we put ideas down into words, we give them form and make them malleable. We bring them out into the light and make them visible to other people. And that’s super important, because we can’t read each other’s minds. We need to be able to examine what we think we know, question it as a group, and refine it. That’s the only way we can get closer to the truth together.</p>
+
+		<p>Writers sometimes talk about this idea of casting a sentence. You throw a line out there and see if it catches. And if it doesn’t ring true, you reel it back in and keep trying. You may use the same words in a different order, swap them out for synonyms, or start over completely. It’s kind of like sketching with words.</p>
+
+		<p>When I sit down to write, I don’t usually know what I’m going to say. It’s only through the act of writing that it becomes clear that I need to say anything at all.</p>
+		
+		<p> If you want to use words as material, I highly encourage you to see them as small blocks and modules you can play with. Write down the words your clients or colleagues use on index cards or sticky notes. Move them around. See how they stack and relate to each other. If clear writing is clear thinking, we have to be willing to get messy first. Anne Lamott talks about this in her classic book, Bird by Bird. She says: </p>
+
+		<blockquote>
+			<p>“What people somehow (inadvertently, I’m sure) forgot to mention when we were children was that we need to make messes in order to find out who we are and why we are here—and, by extension, what we’re supposed to be writing.”
+			</p>
+		</blockquote>
+
+		<p>I like this idea of writing as a way of figuring things out and exploring possibilities—and that willingness to experiment fits right in with design.</p>
+
 	</main>
 
 
 	<footer>
-		<div class="bottom-nav">
-			<ul>	
-				<li class="project">Article 01</li>
-				<li class="project">Article 02</li>
-				<li class="project">Article 03</li>
-			</ul>
-		</div>
+		<p>Designed by Vee Mai </p>
 	</footer>
 </body>
 </html>
