--- a/Pages/article-1.html
+++ b/Pages/article-1.html
@@ -60,28 +60,18 @@
 							<li><a href="#section3">How writing fits in</a></li>
 						</ul>
 						<ul>
-							<li><a href="#section4">The gap between us</a></li>
-						</ul>
-							<li><a href="#section5">What are words for</a></li>
-						</ul>
-						</ul>
-							<li><a href="#section6">Understand and clarify the problem</a></li>
-						</ul>
-						</ul>
-						<li><a href="#section7">More people, more problems</a></li>
-						</ul>
 				</details>
 			</aside>
 			<section>
-				<div class="sticky-header" id="section1">
-					<h2>Emotional > Functional </h2>
-				</div>
 
 				<blockquote class="quotes">
 					<p class="W"> We designers love to fashion ourselves as <em>“problem solvers,”</em> but let’s face it: the line between solving problems and creating them is blurry at best. What problem is being solved by a $1,500 pair of heels, or a $150,000 car, or a $150,000,000 architectural extravaganza in the Bois de Boulogne? The truth is, no matter what designers say, we have never simply answered problems. The act of design vacillates between the functional and the beguiling, often performing one while claiming the other. 
 					</p> 
 				</blockquote>
 
+			<div class="sticky-header" id="section1"></div>
+					<h2>Emotional > Functional </h2>
+			</div>
 			<p>
 				Le Corbusier dismissed the architecture of his beaux-arts contemporaries as cloying, while he looked longingly to the brutal utility of the grain elevators and factories devised by American engineers. A half century later, Rem Koolhaas jettisoned function in favor of performance: 
 			</p>
@@ -118,7 +108,7 @@
 			<div class="sticky-header" id="section1">
 				<h2>Mood Board Revolution</h2>
 			</div>
-			
+
 			<p>
 				So if the goal of design is emotional coherence, how is that end achieved? Enter the mood board: the most quotidian, slightly-embarrassing and now ubiquitous design tool. The mood board has long been associated with the softer design arts — fashion, interiors, styling — that trade in allusion and affect. Decorators used them, serious architects didn’t. There’s no science to it, simply a collection of inspirations and influences: an array of Xeroxed pictures pinned to a foamcore panel or scattered on the studio floor, a cloud of references composed to evoke atmosphere. 
 				
